apps/managerio/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: managerio
spec:
  selector:
    app: managerio
  ports:
    - port: 8080
      targetPort: 8080
      name: http-web
      protocol: TCP
  type: ClusterIP
