apps/managerio/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: managerio-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - secretName: managerio-tls
      hosts:
        - managerio.picturo.us
  rules:
    - host: managerio.picturo.us
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: managerio
                port:
                  number: 8080
